--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -42,7 +42,7 @@
                      [style.margin.px]='imageMargine'>
               </td>
               <td><a [routerLink]="['/products',product.productId]">{{product.productName}}</a></td>
-              <td>{{product.productCode | lowercase }}</td>
+              <td>{{product.productCode | lowercase | convertToSpaces : '-' }}</td>
               <td>{{product.releaseDate}}</td>
               <td>{{product.price | currency:'AUD':'symbol':'1.2-2' }}</td>
               <td><pm-star [rating]= 'product.starRating'
